Remove .vite cache and fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "$recruit---meme-coin-recruitment",
+    "name": "recruitmas",
     "private": true,
     "version": "0.0.0",
     "type": "module",
